# naijaDNA

./: .gitignore
naijapulse-api/: .env.example  README.md  alembic.ini  main.py  pyproject.toml
naijapulse-api/alembic/: env.py
naijapulse-api/alembic/versions/: 20260305_0001_init_postgres_schema.py  20260309_0002_add_poll_votes_table.py  20260311_0003_add_categories_and_poll_creation_fields.py  20260311_0004_add_users_and_relationship_tables.py  20260311_0005_add_user_article_submission_and_subscription_tiers.py  20260311_0006_add_user_password_hash.py  20260312_0007_add_category_colors.py  20260313_0008_add_personalization_tables.py  20260313_0009_add_feed_tags_table.py  20260315_0010_add_stream_sessions_and_presence.py  20260315_0011_add_news_article_ingestion_provider.py  20260316_0012_add_stream_comments.py  20260329_0013_phase1_editorial_workflow.py  20260329_0014_article_comments_notifications.py  20260330_0015_comment_reactions_and_moderation.py  20260331_0016_add_admin_access_requests.py  20260331_0017_add_homepage_configuration.py  20260401_0018_remove_enterprise_subscription_tier.py  20260401_0019_add_subscription_billing_fields.py  20260401_0020_add_user_access_grants_and_requests.py  20260402_0021_add_article_tags.py  20260406_0022_add_admin_access_request_review_fields.py  20260406_0023_add_live_updates.py  20260407_0024_add_homepage_settings.py  20260407_0025_expand_homepage_settings.py  (+5 more)
naijapulse-api/app/: __init__.py  main.py
naijapulse-api/scripts/: create_admin.py  create_contributor.py  create_editor.py  create_user.py  manage_user.py
(+351 files in other folders)
