[project]
name = "naijapulse-api"
version = "0.1.0"
description = "NaijaPulse backend API for news and polls."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.2",
    "apscheduler>=3.10.4",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "sqlalchemy>=2.0.32",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "livekit-api>=1.0.2",
    "firebase-admin>=7.3.0",
]
